--- a/Site Assets/referral.html
+++ b/Site Assets/referral.html
@@ -1,72 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-		<link rel="manifest" href="img/site.webmanifest">
-		<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="keywords" content="HTML, CSS">
-		<meta name="description" content="WebMarkup Assessment">
-		<meta name="author" content="Sam Gijtenbeek">
-		<title> referral </title>
-	
-	</head>
-	<body>
-		<section>									
-			<article class="head">
-			<header id="video_header" title="Main" alt="Main">
-				<h1>Hwa-Rang Dragon</h1>
-				<h2>Taekwondo - Gracie Jiu Jitsu - Mudo</h2>
-			</header>
-			<video class="video_page" autoplay="true" loop="true" muted="true">
-				<source src="video/BJJ-video.mp4" type="video/mp4">								
-			</video>
-			
-			<footer id="video_footer"></footer>
-			</article>
-			
-			
-			
-		</section>
-		
-		<nav>
-			<ul class="nav">
-				<li class="home"><a href="index.html">Home</a></li>
-  				<li class="wijk"><a href="wijk.html">Amsterdamsewijk</a></li>
-  				<li class="sport"><a href="sport.html">Sporten</a></li>				
-  				<li class="contact"><a href="Contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		
-		<article class="inhoud">
-			<h2>Over de stad</h2>
-			<p>De mooie stad Haarlem is de hoofdstad van de provincie Noord-Holland. 
-			Haarlem telt ruim 160.000 inwoners en door de gezellige sfeer die in de stad te vinden, is Haarlem het bezoeken waard! </p>
-		</article>
-		
-		<section>
-			<img title="Haarlem1" alt="unable to load" class="afbeelding" src="img/haarlem1.jpg">
-		</section>
+<html lang="nl">
 
-		<article class="inhoud">
-			<h2>Cultuur</h2>
-			<p>Haarlem is een uitstekende stad om te bezoeken als je cultuur interessant vind. Haarlem bestaat al sinds de 10e eeuw, en dus is er genoeg te zien. De stad telt wel 1.114 rijksmonumenten</p>
-		</article>
+<!--head containing stylesheet link, icons, font, etc.-->
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="description" content="WebMarkup Assessment">
+    <meta name="author" content="Sam Gijtenbeek">
+    <title> referral </title>
 
-		<section>
-			<img title="Haarlem2" alt="unable to load" class="afbeelding" src="img/haarlem2.jpg">
-		</section>
-		
-		<section>
-			<footer class="footer">
-				Sam Gijtenbeek - Inholland Haarlem - 2019
-			</footer>
-		</section>
-		
-	</body>
+</head>
+
+<body>
+
+	<!--video section, header contains title, footer is for extra full page style-->
+    <section>
+        <article class="head">
+            <header id="video_header" title="Main">
+                <h1>Hwa-Rang Dragon</h1>
+                <h2>Taekwondo - Gracie Jiu Jitsu - Mudo</h2>
+            </header>
+            <video class="video_page" autoplay loop muted>
+                <source src="video/BJJ-video.mp4" type="video/mp4">
+            </video>
+
+            <footer id="video_footer"></footer>
+        </article>
+    </section>
+
+	<!--navigation section for 4 pages-->
+    <nav>
+        <ul class="nav">
+            <li class="home"><a href="index.html">Home</a></li>
+            <li class="wijk"><a href="wijk.html">Amsterdamsewijk</a></li>
+            <li class="sports"><a href="sport.html">Sporten</a></li>
+            <li class="contact"><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+	<!--main section-->
+    <section>
+        <img title="dragon" alt="unable to load" class="afbeelding" src="img/dragonlogo.png"> <!--image-->
+
+        <article class="inhoud"> <!--textbox-->
+            <h2>Hwa-Rang Dragon</h2>
+            <p>Respect, discipline en persoonlijk zijn altijd in ontwikkeling bij deze club. Zowel fysiek als mentaal wordt getraind. Alle lessen die hier geleerd worden reflecteren terug op het dagelijkse leven. Trainen is niet alleen werken aan de techniek van de vechtkunst en zelfverdediging. Er wordt ook gewerkt aan zelfvertrouwen en minder stress.</p>
+        </article>
+
+        <img title="bjj" alt="unable to load" class="afbeelding" src="img/bjj.png"> <!--image-->
+
+        <article class="inhoud"> <!--textbox-->
+            <h2>Brazilian Jiu Jitsu</h2>
+            <p>Brazilian Jiu Jitsu (BJJ) is een vechtkunst waarbij "grappling" centraal staat. De nadruk bij BJJ ligt ook op grondgevechten. Het is de bedoeling om in zo'n positie te komen dat de tegenstander moet afkloppen. Een andere stijl van BJJ is Gracie Jiu Jitsu (GCC). Deze stijl heeft zijn eigen aspecten, maar blijft in de basis hetzelfde als BJJ</p>
+            <p>GJJ is een van de takken van Hwa-Rang Dragon. Deze kunst wordt, onder leiding van trainer M. van der Meer, geleerd aan de jeugd (14+) en ouder. Bij deze lessen is het makkelijk om in te stromen en direct toepasbaar. Het doel van deze tak van vechtkunst is niet alleen om het leren van zelfverdediging, maar zeker ook de ontwikkeling van zelfreflectie.</p>
+            <aside>Meer leren of kennis maken? Bezoek onze website <a href="https://www.taekwon.nl/">hier</a></aside>
+        </article>
+    </section>
+
+    <section>
+        <footer class="footer">
+			<p>Made by Sam Gijtenbeek&copy; - Inholland Haarlem - 2019</p>            
+        </footer>
+    </section>
+
+</body>
+
 </html>
