--- a/Site Assets/wijk.html
+++ b/Site Assets/wijk.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-		<link rel="manifest" href="img/site.webmanifest">
-		<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="keywords" content="HTML, CSS">
-		<meta name="description" content="WebMarkup Assessment">
-		<meta name="author" content="Sam Gijtenbeek">
-		<title> Wijk </title>
-	
-	</head>
-	<body>
-		<section>									
-			<article class="head">
-			<header id="video_header" title="Main" alt="Main">
-				<h1>De Amsterdamsewijk</h1>
-			</header>
-			<img title="amsterdamsewijk" alt="unable to load" class="img_page" src="img/wijk_header.png">			
-			
-			<footer id="video_footer"></footer>
-			</article>
-			
-			
-			
-		</section>
-		
-		<nav>
-			<ul class="nav">
-  				<li class="home"><a href="index.html">Home</a></li>
-  				<li class="sport"><a href="sport.html">Sporten</a></li>
-				<li class="referral"><a href="referral.html">Referral</a></li>
-  				<li class="contact"><a href="Contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		
-		<article class="inhoud">
-			<h2>De wijk</h2>
-			<p>De Amsterdamsewijk is een deel van Haarlem gelegen direct ten zuiden van de spoorlijn Haarlem-Amsterdam. Het heeft zo'n 8.000 bewoners.</p>
-		</article>
-		
-		<section>
-			<img title="wijk1" alt="unable to load" class="afbeelding" src="img/wijk1.png">
-		</section>
+<html lang="nl">
 
-		<article class="inhoud">
-			<h2></h2>
-			<p>De Amsterdamsewijk heeft een vrij centrale ligging in Haarlem, zoals hierboven te zien. </p> 
-			<p>De lijn Haarlem-Amsterdam ligt ook dichtbij, dus die verbinding is altijd binnen bereik. </p>
-			<p>Het is vooral een woonwijk waar veel mensen tussen de 25 en 45 jaar wonen. In de buurt zijn vele winkels tot de beschikking. Wijkcentrum 't Broederhuis is er voor de bewoners van de wijk
-			en organiseert activiteiten. Dit centrum ligt aan een winkelstraat. Deze winkelstraat heeft een breed scala aan winkels voor de bewoners.</p>
-		</article>
+<!--head containing stylesheet link, icons, font, etc.-->
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="description" content="WebMarkup Assessment">
+    <meta name="author" content="Sam Gijtenbeek">
+    <title> Wijk </title>
 
-		<section>
-			<img title="park" alt="unable to load" class="afbeelding" src="img/park.png">
-		</section>
-		
-		<article class="inhoud">
-			<h2>Burgemeester Reinaldapark</h2>
-			<p>De Amsterdamsewijk ligt dichtbij het Burgemeester Reinaldapark. Dit is een groot stadspark. </p>
-			<p>In dit park staan monumenten ter nagedachtenis aan de Tweede Wereldoorlog. Ook is er de mogelijk om een groot aantal sporten te beoefenen. Van skateboarden tot basketballen.</p>
-		</article>
+</head>
 
-		
-		<section>
-			<footer class="footer">
-				Sam Gijtenbeek - Inholland Haarlem - 2019
-			</footer>
-		</section>
-		
-	</body>
+<body>
+
+	<!--image section, header contains title, footer is for extra full page style-->
+    <section>
+        <article class="head">
+            <header id="video_header" title="Main">
+                <h1>De Amsterdamsewijk</h1>
+            </header>
+            <img title="amsterdamsewijk" alt="unable to load" class="img_page" src="img/wijk_header.png">
+
+            <footer id="video_footer"></footer>
+        </article>
+    </section>
+
+	<!--navigation section for 4 pages-->
+    <nav>
+        <ul class="nav">
+            <li class="home"><a href="index.html">Home</a></li>
+            <li class="sports"><a href="sport.html">Sporten</a></li>
+            <li class="referral"><a href="referral.html">Referral</a></li>
+            <li class="contact"><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+	<!--main section-->
+    <section>
+        <article class="inhoud"> <!--textbox-->
+            <h2>De wijk</h2>
+            <p>De Amsterdamsewijk is een deel van Haarlem gelegen direct ten zuiden van de spoorlijn Haarlem-Amsterdam. Het heeft zo'n 8.000 bewoners.</p>
+        </article>
+
+        <img title="wijk1" alt="unable to load" class="afbeelding" src="img/wijk1.png"> <!--image-->
+
+        <article class="inhoud"> <!--textbox-->
+            <h2></h2>
+            <p>De Amsterdamsewijk heeft een vrij centrale ligging in Haarlem, zoals hierboven te zien. </p>
+            <p>De lijn Haarlem-Amsterdam ligt ook dichtbij, dus die verbinding is altijd binnen bereik. Reizen tussen de twee steden is vrij gemakkelijk. </p>
+            <p>De Amsterdamsewijk is vooral een woonwijk waar veel mensen tussen de 25 en 45 jaar wonen. In de buurt zijn vele winkels tot de beschikking. Wijkcentrum 't Broederhuis is er voor de bewoners van de wijk en organiseert activiteiten. Dit centrum ligt aan een winkelstraat. Deze winkelstraat heeft een breed scala aan winkels voor de bewoners, zodat basismiddelen altijd in bereik zijn.</p>
+        </article>
+
+        <img title="park" alt="unable to load" class="afbeelding" src="img/park.png"> <!--image-->
+
+        <article class="inhoud"> <!--textbox-->
+            <h2>Bezienswaardigheden</h2>
+            <p>De Amsterdamsewijk ligt dichtbij het Burgemeester Reinaldapark. Dit is een groot stadspark. De naam van dit park verwijst naar burgemeester Marius Antoon Reinalda. Vroeger was dit park een vuilnisbelt, maar door uitbereiding van de stad werd het omgetoverd tot een park. In 2010 kwam er echter weer vuilnis naar boven en dus werd het gerenoveerd. In dit park staan monumenten ter nagedachtenis aan de Tweede Wereldoorlog. Ook is er de mogelijk om een groot aantal sporten te beoefenen. Van skateboarden tot basketballen, er is genoeg recreatie. Fietspaden en wandelpaden zorgen voor de verbindingen tot verschillende parkdelen.</p>
+            <p>Wat meer ten westen van de wijk staat de Amsterdamse Poort. Deze oude Haarlemse stadspoort van rond 1400 is de eerste en ook enige poort die nog staat. Haarlem had oorspronkelijk 12 stadspoorten. deze stadspoort staat aan de oude route tussen Haarlem en Amsterdam. Eerste heette de poort de Spaarnwouderpoort, omdat de rout in die tijd via Spaarwoude liep.</p>
+            <p>Ten Oosten, gelegen aan de Amsterdamsevaart, ligt wereldrestaurant Jin Lai. Dit 4 sterren all-you-can-eat restaurant is een excellente keuze om uit eten te gaan. De verschillende keukens waarvan genoten kan worden bestaan uit: Chinees, vis- en vleesgrill, Europees met een Italiaanse hoek, sushi en nog veel meer.</p>
+            <p>In de wijk ligt voetbalclub DSK. Voor alle voetbalsfans zijn hier genoeg wedstrijden te zien. Voor de toekomstige voetbalkinderen is natuurlijk ook een plekje. Voetbalclub DSK is een prima keuze om uw sportbehoeftes mee te vervullen.</p>
+        </article>
+    </section>
+
+	<!--footer section-->
+    <section>
+        <footer class="footer">
+			<p>Made by Sam Gijtenbeek&copy; - Inholland Haarlem - 2019</p>            
+        </footer>
+    </section>
+
+</body>
+
 </html>
