--- a/Site Assets/contact.html
+++ b/Site Assets/contact.html
@@ -51,10 +51,10 @@
                 <input type="text" name="onderwerp" placeholder="Onderwerp.." />
             </fieldset>
             <fieldset class="contactFormFieldset">
-                <input type="text" name="name" placeholder="Your name.." />
+                <input type="text" name="name" placeholder="Naam.." />
             </fieldset>
             <fieldset class="contactFormFieldset">
-                <input type="email" name="email" placeholder="Your email.." />
+                <input type="email" name="email" placeholder="Email.." />
             </fieldset>
             <fieldset>
                 <textarea rows="7" cols="40" name="message" placeholder="Write something.."></textarea>
