--- a/Site Assets/sport.html
+++ b/Site Assets/sport.html
@@ -39,7 +39,7 @@
             <li class="home"><a href="index.html">Home</a></li>
             <li class="wijk"><a href="wijk.html">Amsterdamsewijk</a></li>
             <li class="referral"><a href="referral.html">Referral</a></li>
-            <li class="contact"><a href="Contact.html">Contact</a></li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -88,7 +88,7 @@
 
         <article class="sport"> <!--textbox-->
             <a href="https://vereniging.triplethreat.nl/">
-                <img title="voetbal" alt="unable to load" class="afbeeldingSportRechts" src="img/voetbal.png">
+                <img title="basketbal" alt="unable to load" class="afbeeldingSportRechts" src="img/basketbal.png">
             </a>
             <h2>Triple Threat</h2>
             <p>Triple Threat is een basketbalvereniging gericht op de jongerencultuur. Ze zijn in 2 jaar tijd van 3 naar 9 teams gegaan. Triple Threat is perfect voor jongeren in Haarlem en omstreken die eraan denken om te gaan basketballen.</p>
