--- a/Site Assets/wijk.html
+++ b/Site Assets/wijk.html
@@ -39,7 +39,7 @@
             <li class="home"><a href="index.html">Home</a></li>
             <li class="sports"><a href="sport.html">Sporten</a></li>
             <li class="referral"><a href="referral.html">Referral</a></li>
-            <li class="contact"><a href="Contact.html">Contact</a></li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
