--- a/Site Assets/index.html
+++ b/Site Assets/index.html
@@ -42,7 +42,7 @@
             <li class="wijk"><a href="wijk.html">Amsterdamsewijk</a></li>
             <li class="sports"><a href="sport.html">Sporten</a></li>
             <li class="referral"><a href="referral.html">Referral</a></li>
-            <li class="contact"><a href="Contact.html">Contact</a></li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>	
 	
