--- a/Site Assets/referral.html
+++ b/Site Assets/referral.html
@@ -42,7 +42,7 @@
             <li class="home"><a href="index.html">Home</a></li>
             <li class="wijk"><a href="wijk.html">Amsterdamsewijk</a></li>
             <li class="sports"><a href="sport.html">Sporten</a></li>
-            <li class="contact"><a href="Contact.html">Contact</a></li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
